# qod-ppm-odoo-mcp

./: .env.example  .gitignore  README.md  pyproject.toml
src/qod_ppm_mcp/: __init__.py  __main__.py  client.py  server.py
