[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qod-ppm-odoo-mcp"
version = "0.1.0"
description = "MCP server for the QOD PPM Odoo plugin — exposes buttons, wizards, and workflow transitions. Designed to run alongside a generic Odoo MCP server."
readme = "README.md"
license = { text = "LGPL-3.0-or-later" }
requires-python = ">=3.10"
authors = [{ name = "wethti" }]
keywords = ["mcp", "odoo", "ppm", "claude", "anthropic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6"]

[project.scripts]
qod-ppm-mcp = "qod_ppm_mcp.__main__:main"

[project.urls]
Repository = "https://github.com/wethti/qod-ppm-odoo-mcp"
Issues = "https://github.com/wethti/qod-ppm-odoo-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/qod_ppm_mcp"]

[tool.ruff]
line-length = 100
target-version = "py310"
